<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FirstLab</string>
    <string name="preference_file_key">preference_name</string>
    <string name="collatz">КОЛ</string>
    <string name="fibonacci">ФИБ</string>
    <string name="natural">НАТ</string>
    <string name="copter">дрон</string>
    <string name="task_1">Задание 1</string>
    <string name="task_2">Задание 2</string>
    <string name="task_3">Задание 3</string>
    <string name="zero">0</string>
    <string name="increase">добавить</string>
    <string name="decrease">уменьшить</string>
    <string name="mutlirotors">Мультироторы</string>
    <string name="title">Заголовок</string>
    <string name="hello">Привет</string>
    <string name="change_label_color">Поменять цвет заголовка</string>
    <string name="hide_list">Спрятать список</string>
    <string name="toast">Тост</string>
    <string name="accept_text">принять текст</string>
    <string name="show_list">Показать список</string>
    <string name="by_peter_bozhko">by Peter Bozhko</string>
    <string name="run">Старт</string>
    <string name="stop">Стоп</string>
    <string name="reset">Сброс</string>
    <string name="speed">Скорость</string>
    <string name="book_library">Библиотека книг</string>
    <string name="books">книги</string>
    <string name="authors">авторы</string>
    <string name="book_name">название</string>
    <string name="author_id">id автора</string>
    <string name="year">год</string>
    <string name="complete">готово</string>
    <string name="authors_library">Список авторов</string>
    <string name="first_name">имя</string>
    <string name="last_name">фамилия</string>
    <string name="confirm_action">Подтвердите действие</string>
    <string name="ok">ок</string>
</resources>