<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="6"
        android:baselineAligned="false">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="6">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/copter"
                android:scaleType="fitCenter"
                android:src="@drawable/copter"
                android:layout_marginTop="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/mutlirotors"/>
        </FrameLayout>
        <ListView
            android:id="@+id/list_view"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="10sp"
            android:layout_weight="4"/>
    </LinearLayout>
    <TextView
        android:id="@+id/label_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_weight="1"
        android:layout_marginTop="12dp"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/title"/>
    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:layout_weight="1"
        android:hint="@string/hello"
        android:autofillHints=""
        android:inputType="text" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"

        android:layout_height="wrap_content">
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/change_color_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/change_label_color"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="clip_vertical"
        android:orientation="horizontal"
        android:layout_marginVertical="12dp"
        android:layout_weight="2">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:layout_weight="1">

            <Button
                android:id="@+id/hide_list_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hide_list" />

            <Button
                android:id="@+id/show_toast_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/toast" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/set_text_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            app:srcCompat="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/accept_text" />
    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>