<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="30dp"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"
        tools:srcCompat="@drawable/copter_icon"
        android:contentDescription="@string/copter" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintEnd_toEndOf="@+id/image"
        app:layout_constraintStart_toStartOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/nat_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/regular_text_size"
        tools:text="3"
        app:layout_constraintBottom_toTopOf="@id/nat_btn"
        app:layout_constraintEnd_toEndOf="@id/nat_btn"
        app:layout_constraintStart_toStartOf="@id/nat_btn"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/fib_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintEnd_toEndOf="@id/fib_btn"
        app:layout_constraintStart_toStartOf="@id/fib_btn"
        app:layout_constraintTop_toTopOf="@+id/nat_text_view" />

    <TextView
        android:id="@+id/col_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintEnd_toEndOf="@id/col_btn"
        app:layout_constraintStart_toStartOf="@id/col_btn"
        app:layout_constraintTop_toTopOf="@+id/nat_text_view" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/icon"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <Button
        android:id="@+id/nat_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/natural"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fib_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nat_text_view" />

    <Button
        android:id="@+id/fib_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fibonacci"
        app:layout_constraintStart_toEndOf="@id/nat_btn"
        app:layout_constraintEnd_toStartOf="@id/col_btn"
        app:layout_constraintTop_toTopOf="@id/nat_btn"/>

    <Button
        android:id="@+id/col_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collatz"
        app:layout_constraintStart_toEndOf="@id/fib_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/nat_btn"/>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/regular_text_size"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/image"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/copter" />


</androidx.constraintlayout.widget.ConstraintLayout>